added multiprocessing; should work basically, but now it is as complex as as_run and hasn\'t its stability

--- a/tests/testprofile.yml
+++ b/tests/testprofile.yml
@@ -1,7 +1,7 @@
 # source directory for all files if relative path
 srcdir: "."
 # output directory for all stuff
-outdir: "/home/martin/testdir/asterclient"
+outdir: "results"
 # input mesh file
 meshfile: "mesh.med"
 # define the studies
