--- a/examples/basic/profile.yml
+++ b/examples/basic/profile.yml
@@ -15,6 +15,9 @@ calculations:
       - bikeframe.table: 39
       - bikeframe.resu: 38
       - buckling.resu: 37
+    inputfiles:
+      - parameters.py
+
   - name: "post"
     commandfile: "post.comm"
     poursuite: "main"
