added interactive session (parallel doesn't work there), and removed several bugs

--- a/asterclient/data/default.conf
+++ b/asterclient/data/default.conf
@@ -38,5 +38,7 @@ interact = False
 suivi_batch = True
 # only check the syntax of the command file is done
 verif = False
+# default output directory
+outdir = "results"
 
 #  vim: set ft=python ts=4 sw=4 tw=0 :
