--- a/asterclient/data/defaults_old.conf
+++ b/asterclient/data/defaults_old.conf
@@ -5,17 +5,17 @@
 # date = 20.03.2013
 #
 # the used code aster version, needed to get the whole path
-version = "11.4"
+version = "STA11.3"
 # the code aster root path
 aster_root = os.getenv('ASTER_ROOT')
 # path to asteru
-aster = "bin/aster"
+aster = "asteru"
 # path of the bibpyt directory
-bibpyt = "lib/python2.7/site-packages/"
+bibpyt = "bibpyt"
 # path to the directory cata.py is located, well not used for now, link it into Cata
 cata = "commande"
 # path to the elements
-elements = "share/aster/elements"
+elements = "elements"
 # path to the Code Aster tools
 rep_outils = "outils"
 # path to the material properties
