changed the profile.conf to the new style

--- a/examples/basic/profile.conf
+++ b/examples/basic/profile.conf
@@ -9,28 +9,29 @@ outdir = "results"
 # input mesh file
 meshfile = "mesh.med"
 logfile = "asterclient.log"
+#workdir = '~/tmp'
 #workdir = "/data/tmp"
 # define the studies
 calculations = [
     {"name":"main",
       "commandfile": "main.comm",
-      "resultfiles":{
-            "bikeframe.rmed":80,
-            "bikeframe.msh": 81,
-            "buckling.rmed": 82,
-            "bikeframe.table": 39,
-            "bikeframe.resu": 38,
-            "buckling.resu": 37,
-            },
+      "resultfiles":[
+          {"name":"bikeframe.rmed","funit":80},
+          {"name":"bikeframe.msh","funit": 81},
+          {"name":"buckling.rmed","funit": 82},
+          {"name":"bikeframe.table","funit": 39},
+          {"name":"bikeframe.resu","funit": 38},
+          {"name":"buckling.resu","funit": 37},
+      ],
       "inputfiles":["parameters.py"],
       },
     {"name": "post",
       "commandfile":"post.comm",
       "poursuite": "main",
-      "resultfiles":{
-        "vmises.table": 40,
-        "protocol": "protocol*.rst",
-        }
+      "resultfiles":[
+          {"name":"vmises.table","funit": 40},
+          {"name":"protocol","glob":"protocol*.rst"},
+        ],
       }]
 
 # define different parameter sets for studies
